<resources>
    <string name="app_name" translatable="false">Pemp\'z</string>

    <string name="press_again_exit_app">Press again to exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pempz_details">PempzDetailsActivity</string>

    <string name="pempz_details_menu_edit">Edit</string>

    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>

    <string name="pempz_details_contacts">Contacts</string>
    <string name="pempz_details_from">From</string>
    <string name="pempz_details_to">To</string>
    <string name="pempz_details_waiting_time_before_hanging_up">Time before hanging up</string>
    <string name="pempz_details_waiting_time_before_sending_message">Time before sending message</string>
    <string name="title_activity_pempz">PempzActivity</string>

    <string name="pempz_form_full_day_text">Full Day</string>
    <string name="pempz_form_start_text">Begin</string>
    <string name="pempz_form_end_text">End</string>
    <string name="pempz_form_ring_time">Ring Time</string>
</resources>
