<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pempz.PempzActivity"
    tools:showIn="@layout/activity_pempz"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_middle"
            android:src="@drawable/ic_mail"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorAccent"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:text="Message"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Small"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Type the message to send..."
                    android:textSize="6pt"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_bg"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_middle"
            android:src="@drawable/ic_access_time"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/full_day_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pempz_form_full_day_text"
                    android:textSize="11sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <com.rey.material.widget.Switch
                    android:id="@+id/full_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/pempz_form_start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pempz_form_start_text"
                    android:textSize="11sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <Button
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_below="@id/pempz_form_start_text"/>

                <Button
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:textColor="@android:color/black"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_below="@id/pempz_form_start_text"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/pempz_form_end_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pempz_form_end_text"
                    android:textSize="11sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <Button
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:textColor="@android:color/black"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_below="@id/pempz_form_end_text"/>

                <Button
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:textColor="@android:color/black"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_below="@id/pempz_form_end_text"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/grey_bg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/start_date"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_middle"
            android:src="@drawable/ic_phonelink_ring"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pempz_form_ring_time"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/ring_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:hint="in secondes..."
                android:textSize="5pt"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/grey_bg"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/ring_time"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_middle"
            android:src="@drawable/ic_timer"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pempz_details_waiting_time_before_sending_message"
                android:ellipsize="end"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/waiting_time_sending_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:hint="in secondes..."
                android:textSize="5pt"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/grey_bg"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/waiting_time_sending_message"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
